Correct alignment issue with the sidebar's search tab

--- a/client/src/styles/component/sidebar/_SidebarTabCard.scss
+++ b/client/src/styles/component/sidebar/_SidebarTabCard.scss
@@ -9,7 +9,7 @@
     }
 
     @include device($breakpoint-md) {
-      display: block;
+      display: flex;
     }
   };
 
